<resources>
    <string name="app_name">Praxtour</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sample_list_dialog_title">Add samples</string>
    <string name="title_activity_catalog">Praxtour</string>
    <string name="dummy_button">Quick stop</string>
    <string name="dummy_content" translatable="false">FitStream</string>
    <string name="title_activity_videoplayer">Praxtour</string>
    <string name="title_activity_settings">Praxtour</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fullscreen" translatable="false">Praxtour</string>
    <string name="title_activity_login" translatable="false">Praxtour</string>
    <string name="title_activity_login_tv" translatable="false">LoginActivityTv</string>
    <string name="title_activity_update_launcher" translatable="false">UpdateLauncherActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="action_register_user">Register</string>
    <string name="failed_login">Failed to login!</string>
    <string name="under_construction">Unlocks later</string>
    <string name="loading_profile_message">Profile %s loading</string>
    <string name="pre_video_message">Please start exercising</string>
    <string name="pre_video_title">Please start slowly</string>
    <string name="ant_error_message">Ant+ device not found!</string>
    <string name="ant_error_title">Ant+ plugin error</string>
    <string name="positive_button">Ok</string>
    <string name="pause_screen_title">Pause</string>
    <string name="pause_screen_message">Start exercise if you want to continue</string>
    <string name="finish_screen_title">Finish!</string>
    <string name="pause_screen_button_text">Back to overview</string>
    <string name="video_screen_distance">%d m</string>
    <string name="video_screen_rpm">%d</string>
    <string name="loading_message">Keep paddling</string>
    <string name="dead_device_screen_title">Sensor not connected</string>
    <string name="dead_device_screen_message">Could not connect to sensor. Please restart the movie and try again.</string>
    <string name="catalog_screen_distance">Distance: %d,%d km</string>
    <string name="video_screen_total_distance">%d m</string>
    <string name="videoplayer_chronometer_message">%s</string>
    <string name="catalog_selected_route_title">%s</string>
    <string name="login_information_dialog">For more information go to our website: <a href="https://praxcloud.eu" style="text-decoration: none">praxcloud.eu</a></string>
    <string name="catalog_no_movies_warning">No movies found for this account!</string>
    <string name="profile_add_form_warning">Form not valid!</string>
    <string name="profile_add_form_error">Failed to create profile.</string>
    <string name="products_none_available_warning">No products are available for this account!</string>
    <string name="new_profile_form_title">New Profile</string>
    <string name="new_profile_form_choose_avatar">Choose Avatar</string>
    <string name="new_profile_form_enter_name">Insert Name</string>
    <string name="profile_add_form_enter_profile_name_hint">Enter profile name...</string>
    <string name="profile_add_form_confirm_button_text">Confirm and add profile</string>
    <string name="productpicker_signout_button_text">Signout</string>
    <string name="profile_add_form_next_button_text">Next</string>
    <string name="profile_add_form_action_label">Add profile</string>
    <string name="login_action_password_forgotten">Password forgotten?</string>
    <string name="catalog_download_status_message">Download status: %,.2f percent</string>
    <string name="catalog_already_downloading_message">Movie is still downloading.</string>
    <string name="routefilmpicker_back_button_text">Back</string>
    <string name="statusbar_time_title">Time</string>
    <string name="statusbar_distance_title">Distance</string>
    <string name="statusbar_finish_distance_title">Finish</string>
    <string name="statusbar_volume_title">Volume</string>
    <string name="statusbar_rpm_title">RPM</string>
    <string name="videoplayer_sensor_wait_error_message">Failed to connect sensor, please try again.</string>
    <string name="update_available">Update for Praxtour app available!</string>
    <string name="warning_need_more_disk_capacity">No disk present which can hold all the desired movies.</string>
    <string name="product_view_loading_data_message">Loading data...</string>
    <string name="menu_nav_home_title">Home</string>
    <string name="menu_nav_ble_settings_title">BLE settings</string>
    <string name="settings_ble_activity_sensor_overview_header">Selected Sensor</string>
    <string name="settings_ble_name_header">Name:</string>
    <string name="settings_ble_value_placeholder_no_device">No device</string>
    <string name="settings_ble_battery_header">Battery:</string>
    <string name="settings_ble_battery_value_placeholder">--%</string>
    <string name="settings_ble_signal_strength_header">Signal strength:</string>
    <string name="settings_ble_signal_strength_value_placeholder">None</string>
    <string name="settings_ble_connect_to_device_header">Start moving sensor to activate the sensor. \nClick on the SELECT button to select the sensor where the Select button is shown in green.\nSelect sensor device:</string>
    <string name="productpicker_settings_button_text">Settings</string>
    <string name="signal_strength_indicator_no_signal_value">No signal</string>
    <string name="signal_strength_indicator_excellent_signal_value">Excellent</string>
    <string name="signal_strength_indicator_very_good_signal_value">Very good</string>
    <string name="signal_strength_indicator_good_signal_value">Good</string>
    <string name="signal_strength_indicator_low_signal_value">Low</string>
    <string name="signal_strength_indicator_very_low_signal_value">Very low</string>
    <string name="single_ble_device_connect_label">Select</string>
    <string name="error_message_general">Internet speedtest failed, please upgrade or check connection!</string>
    <string name="error_message_speedtest">The internet speedtest failed.\nThe measured speed is %d Mbps and the minimum needed speed is %d Mbps.</string>
    <string name="ble_not_supported_or_turned_on">Bluetooth Low Energy not supported or turned on.</string>
    <string name="ble_choose_connected_device_toast_message">Please select sensor to connect with.</string>
    <string name="ble_device_lack_permission_message">No background location permission set which is mandatory for Bluetooth.</string>
    <string name="permission_error_message">A permission is not granted at the moment, click on the \'%s\' button to open the settings view or request the missing permission.</string>
    <string name="show_settings_button">Open Settings</string>
    <string name="retry_permission_check_button">Retry</string>
    <string name="permission_settings_text_ble_permission">Ask BLE permissions</string>
    <string name="permission_settings_text_location_permission">Ask location permissions</string>
    <string name="statusbar_time_indicator">Time</string>
    <string name="action_sign_out_short">Logout</string>
    <string name="login_form_enter_username">Enter username</string>
    <string name="login_form_enter_username_hint">Username</string>
    <string name="login_form_enter_password">Enter password</string>
    <string name="login_form_enter_password_hint">Password</string>
    <string name="profile_add_form_previous_button_text">Previous</string>
    <string name="menu_nav_routes_title">Routes</string>
    <string name="menu_nav_results_title">Results</string>
    <string name="menu_nav_downloads_title">Downloads</string>
    <string name="product_menu_button_text">Menu</string>
    <string name="ble_connectivity_problems_alert">Problems with your BLE connection? Turn Bluetooth or Location off and on and try again.</string>
    <string name="login_proces_status_title">Login status</string>
    <string name="logout_action_description">Confirm that you want to log out</string>
    <string name="logout_button_label">Logout</string>
    <string name="product_menu_title">Menu</string>
    <string name="login_storage_permission_title">Storage permission</string>
    <string name="login_location_permission_title">Location permission</string>
    <string name="login_manage_overlay_permission_title">Auto-start permission</string>
    <string name="videoplayer_no_audio_alert_title">No Audio possible</string>
    <string name="videoplayer_no_audio_alert_content">Audio is not detected, this are the most likely reasons:\n- Device muted\n- No file loaded\n- Volume too low\n- Android system settings not properly set</string>
    <string name="videoplayer_no_audio_alert_button_confirm_text">Confirm</string>
    <string name="logout_no_password_entered_alert">No password entered.</string>
    <string name="logout_wrong_password_entered_text">Wrong password entered.</string>
    <string name="loading_general">Loading...</string>
    <string name="downloading_sound_files">Downloading sound files</string>
    <string name="downloaded_files_already_present">Files are already present.</string>
    <string name="sound_download_informal_message">"Preparing for first time use, this can take a few moments.\n\nDownloading: "</string>
    <string name="login_proces_step_formatting">Step %d of %d: %s</string>
    <string name="download_flags_title">Downloading flag images</string>
    <string name="download_general_message">"Downloading: "</string>
    <string name="download_routeparts_title">Downloading movie routepart images</string>
    <string name="download_movie_support_images_title">Downloading movie support images</string>
    <string name="login_sync_db_title">Synchronizing database</string>
    <string name="login_sync_db_description">Database is synchronizing...</string>
    <string name="login_sync_db_successfull_message">Database is sucessfully updated with %d movies.</string>
    <string name="login_success_summary_title">Succesfully logged in as %s</string>
    <string name="login_no_products">There are no active product subscriptions present.\nPlease register for any of our products.</string>
    <string name="login_message_failed_description">Username and/or password are wrong.\nPlease try again.</string>
    <string name="login_status_summary_standalone">Before continuing you need to accept the following permissions:\n> \"Manage overlay\" permission: to start Praxtour automatically.\n> Storage permission: for saving movies on the harddisk.\n> Location permission: for Bluetooth sensors.\n\nPlease proceed to accept the permissions.</string>
    <string name="login_status_summary_hybrid">Before continuing you need to accept the following permissions:\n> \"Manage overlay\" permission: to start Praxtour automatically.\n> Storage permission: for saving movies on the harddisk.\n> Location permission: for Bluetooth sensors.\n\nPlease proceed to accept the permissions.</string>
</resources>