<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_white_24"
            android:title="@string/menu_nav_home_title" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_cloud_download"
            android:title="@string/menu_nav_downloads_title" />
        <item
            android:id="@+id/nav_ble"
            android:icon="@drawable/ic_baseline_settings_bluetooth_white_24"
            android:title="@string/menu_nav_ble_settings_title" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_shutdown"
            android:title="@string/productpicker_signout_button_text" />
    </group>
</menu>