<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_insert_username_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/login_form_enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/login_insert_username_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/login_form_enter_username_hint"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/profile_add_form_next_button_text"
        android:background="#FFFFFF"
        android:nextFocusUp="@id/login_goto_password_button"
        android:nextFocusDown="@id/login_goto_password_button" />
    <Button
        android:id="@+id/login_goto_password_button"
        android:text="@string/profile_add_form_next_button_text"
        android:background="@drawable/imagebutton_blue_border"
        android:backgroundTint="#009fff"
        android:textColor="#FFFFF0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:nextFocusUp="@id/login_insert_username_input" />
</LinearLayout>