<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_show_username_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/login_form_enter_username_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/login_show_inserted_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:focusable="false"
            android:enabled="false"
            android:imeActionLabel="@string/profile_add_form_next_button_text"
            android:background="#FFFFFF"
            android:nextFocusUp="@id/profile_avatar_holder_female"
            android:nextFocusDown="@id/profile_add_confirm_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_insert_password_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/login_form_enter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/login_insert_password_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_form_enter_password_hint"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/profile_add_form_next_button_text"
            android:background="#FFFFFF"
            android:nextFocusUp="@id/profile_avatar_holder_female"
            android:nextFocusDown="@id/profile_add_confirm_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login_goto_username_button"
            android:text="@string/profile_add_form_previous_button_text"
            android:background="@drawable/imagebutton_blue_border"
            android:backgroundTint="#009fff"
            android:textColor="#FFFFF0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:nextFocusUp="@id/profile_add_name" />
        <Button
            android:id="@+id/login_goto_login_result_button"
            android:text="@string/profile_add_form_next_button_text"
            android:background="@drawable/imagebutton_blue_border"
            android:backgroundTint="#009fff"
            android:textColor="#FFFFF0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:nextFocusUp="@id/profile_add_name" />
    </LinearLayout>

</LinearLayout>