<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overlay_ble_devices_information_block"
    android:layout_width="700dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center|center_horizontal"
    android:background="@drawable/imagebutton_blue_border"
    android:backgroundTint="@color/light_blue_900"
    android:orientation="vertical"
    android:descendantFocusability="afterDescendants"
    android:padding="10dp"
    android:layout_margin="25dp">

    <LinearLayout
        android:id="@+id/overlay_connection_warning_box"
        android:background="@drawable/imagebutton_blue_border"
        android:backgroundTint="@color/light_blue_600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_warning" />
        <TextView
            android:id="@+id/message_connection_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/exo_white"
            android:text="@string/ble_connectivity_problems_alert"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/selected_device_info_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/overlay_connection_warning_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center|center_horizontal"
        android:background="@drawable/imagebutton_blue_border"
        android:backgroundTint="@color/light_blue_600"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:layout_marginTop="1dp"
            android:src="@drawable/bluetooth_small"/>

        <LinearLayout
            android:id="@+id/selected_device_info_summary_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/selected_device_box_title_textview"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/exo_white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:text="@string/settings_ble_activity_sensor_overview_header"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/settings_ble_name_header"/>
                <TextView
                    android:id="@+id/selected_device_name_textview"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/settings_ble_value_placeholder_no_device"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="Status:"/>
                <TextView
                    android:id="@+id/selected_device_connection_status_textview"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="--"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/settings_ble_battery_header"/>
                <TextView
                    android:id="@+id/selected_device_battery_textview"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="5dp"
                    android:focusable="false"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/settings_ble_battery_value_placeholder"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/settings_ble_signal_strength_header"/>
                <TextView
                    android:id="@+id/selected_device_connection_strength_textview"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="5dp"
                    android:focusable="false"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/settings_ble_signal_strength_value_placeholder"/>
            </LinearLayout>
            <Button
                android:id="@+id/ble_sensor_disconnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cast_disconnect"
                android:textColor="@color/exo_white"
                style="@style/AppTheme.Focusable.ButtonRedOnFocus"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ble_not_supported_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/exo_white"
        android:text="@string/ble_not_supported_or_turned_on"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loading_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/exo_white"
        android:text="Resetting Bluetooth..."
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/overlay_messagebox_connection_info_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/instructions_to_connect_textview"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:textColor="@color/exo_white"
                android:text="@string/settings_ble_connect_to_device_header" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/available_bluetooth_devices_recyclerview"
                android:layout_width="400dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>