<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overlay_ble_devices_information_block"
    android:layout_width="700dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_gravity="center|center_horizontal"
    android:background="@drawable/imagebutton_blue_border"
    android:backgroundTint="@color/light_blue_900"
    android:orientation="vertical"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:padding="10dp"
    android:layout_margin="25dp">

    <LinearLayout
        android:id="@+id/overlay_connection_info_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center|center_horizontal"
        android:background="@drawable/imagebutton_blue_border"
        android:backgroundTint="@color/light_blue_600"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:focusable="false"
            android:layout_marginTop="1dp"
            android:src="@drawable/praxtour_logo"/>

        <LinearLayout
            android:id="@+id/overlay_connection_info_summary"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:focusable="false"
                    android:textColor="@color/exo_white"
                    android:textSize="12sp"
                    android:text="@string/logout_action_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:alpha="0.95"
                    android:background="#ffffff"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_out_short"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:nextFocusDown="@id/account_logout_button"
                    android:nextFocusRight="@id/account_logout_button" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/account_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/logout_button_label"
            android:background="@null"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@color/exo_white"
            android:nextFocusUp="@id/password"
            android:nextFocusLeft="@id/password"
            android:nextFocusDown="@id/account_logout_button"
            android:nextFocusRight="@id/account_logout_button"/>
    </LinearLayout>
</LinearLayout>